sumo/tests/traci/ChangeVehicleValue/ChangeRouteByID/InvalidRouteId/vehroutes.traci
<?xml version="1.0"?>

<!-- generated on 10/08/09 09:10:54 by SUMO sumo Version dev-SVN-r7822
<configuration>

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="routes.rou.xml"/>
    </input>

    <output>
        <netstate-dump value="netstate_dump.xml"/>
        <vehroute-output value="vehroutes.xml"/>
    </output>

    <report>
        <no-step-log value="true"/>
    </report>

    <traci_server>
        <remote-port value="8815"/>
        <penetration value="1"/>
    </traci_server>

</configuration>
-->

<routes>
    <vehicle id="veh0" depart="0" arrival="61">
        <route edges="e_m5 e_m6 e_shape1"/>
   </vehicle>

</routes>
